src/objects/Asset_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>May include asset shut off &quot;key&quot; or other information</description>
        <label>Additional Information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Category__c</fullName>
        <label>Asset Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT Equipment</fullName>
                </value>
                <value>
                    <fullName>Office Equipment</fullName>
                </value>
                <value>
                    <fullName>Furniture, Fixtures and Equipment</fullName>
                </value>
                <value>
                    <fullName>Medical Equipment</fullName>
                </value>
                <value>
                    <fullName>Other Unspecified Assets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Description__c</fullName>
        <label>Asset Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Asset_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Desktop Computer</fullName>
                </value>
                <value>
                    <fullName>Laptop Computer</fullName>
                </value>
                <value>
                    <fullName>Tablet Computer</fullName>
                </value>
                <value>
                    <fullName>Router</fullName>
                </value>
                <value>
                    <fullName>Voice / Data</fullName>
                </value>
                <value>
                    <fullName>Printer</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Clinic Equipment</fullName>
                </value>
                <value>
                    <fullName>Lab Equipment</fullName>
                </value>
                <value>
                    <fullName>Office Equipment</fullName>
                </value>
                <value>
                    <fullName>Other Unspecified Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Owner of XO asset or equipment</description>
        <label>Asset Owner</label>
        <referenceTo>XO_Employee__c</referenceTo>
        <relationshipLabel>XO Asset Tracking</relationshipLabel>
        <relationshipName>XO_Asset_Tracking</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Picture__c</fullName>
        <label>Asset Picture</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Client_Location__c</fullName>
        <label>Client Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>XOWWHQ Aliso</fullName>
                </value>
                <value>
                    <fullName>XO San Francisco</fullName>
                </value>
                <value>
                    <fullName>Apple Cupertino</fullName>
                </value>
                <value>
                    <fullName>Apple Austin</fullName>
                </value>
                <value>
                    <fullName>Apple Sacramento</fullName>
                </value>
                <value>
                    <fullName>Facebook Menlo Park</fullName>
                </value>
                <value>
                    <fullName>Facebook Austin</fullName>
                </value>
                <value>
                    <fullName>Applied Santa Clara Valley</fullName>
                </value>
                <value>
                    <fullName>Applied Gloucester</fullName>
                </value>
                <value>
                    <fullName>Qualcomm San Diego</fullName>
                </value>
                <value>
                    <fullName>First American Santa Ana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Asset_Owner__r.Employee_First_Name__c +&quot; &quot;+ Asset_Owner__r.Employee_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Asset_Owner__r.Employee_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <label>Model Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>Name of the Product Vendor.</description>
        <inlineHelpText>For example, Cisco or Welch Allyn</inlineHelpText>
        <label>Vendor</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XO_Asset_Tag__c</fullName>
        <description>Insert the asset tag number</description>
        <label>XO Asset Tag</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>XO Asset Tracking</label>
    <listViews>
        <fullName>Cupertino_Assets_1</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>XO_Asset_Tag__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Asset_Category__c</columns>
        <columns>Asset_Owner__c</columns>
        <columns>Model_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client_Location__c</field>
            <operation>equals</operation>
            <value>Apple Cupertino</value>
        </filters>
        <label>Cupertino Assets 1</label>
        <sharedTo>
            <role>XO_Practice_Manager_Apple_Cupertino</role>
            <roleAndSubordinates>XO_Practice_Manager_Apple_Cupertino</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XO Asset Tracking</pluralLabel>
    <recordTypes>
        <fullName>Assets_AMAT_Gloucester</fullName>
        <active>true</active>
        <label>Assets - AMAT Gloucester</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assets_AMAT_Santa_Clara</fullName>
        <active>true</active>
        <label>Assets - AMAT Santa Clara</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assets_Apple_Austin</fullName>
        <active>true</active>
        <label>Assets - Apple Austin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assets_Apple_Cupertino</fullName>
        <active>true</active>
        <label>Assets - Apple Cupertino</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assets_FB_Menlo_Park</fullName>
        <active>true</active>
        <label>Assets - FB Menlo Park</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assets_MSO</fullName>
        <active>true</active>
        <label>Assets - MSO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assets_Square</fullName>
        <active>true</active>
        <label>Assets - Square</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>